# STM-Project

./: .gitignore  .~lock.Testing O_STM library.odt#  README.md  Testing O_STM library.odt
Windows/: CMakeLists.txt  README.md  TM.cpp
Windows/CLIENT_FILES/: BANK.h  OSTM.h  TM.h  TX.h  WAREHOUSE.h  main.cpp
Windows/DEV_APP/: Doxyfile  Doxyfile~  OSTM.h  README.md  TM.h  TX.h  main.cpp
Windows/DEV_APP/Doxygen/html/: _a_i_b_8cpp.html  _a_i_b_8cpp__incl.map  _a_i_b_8cpp_source.html  _a_i_b_8h.html  _a_i_b_8h__dep__incl.md5  _a_i_b_8h__incl.map  _a_i_b_8h_source.html  _b_a_n_k_8cpp.html  _b_a_n_k_8cpp_source.html  _b_a_n_k_8h.html  _b_a_n_k_8h__dep__incl.map  _b_a_n_k_8h__incl.map  _b_a_n_k_8h_source.html  _b_o_a_8cpp.html  _b_o_a_8cpp__incl.map  _b_o_a_8cpp__incl.md5  _b_o_a_8cpp_source.html  _b_o_a_8h.html  _b_o_a_8h__dep__incl.map  _b_o_a_8h_source.html  _b_o_i_8cpp.html  _b_o_i_8cpp__incl.map  _b_o_i_8cpp_source.html  _b_o_i_8h.html  _b_o_i_8h__incl.md5  _b_o_i_8h_source.html  _c_a_r_l_o_w___w_8cpp.html  _c_a_r_l_o_w___w_8cpp__incl.map  _c_a_r_l_o_w___w_8cpp_source.html  _c_a_r_l_o_w___w_8h.html  _c_a_r_l_o_w___w_8h_source.html  _c_a_r_p_h_o_n_e___w_a_r_e_h_o_u_s_e_8cpp.html  _d_u_n_d_a_l_k___w_8cpp.html  (+632 more)
Windows/DLL_LIB/: README.md
Windows/DLL_LIB/Shared/: STM.lib  STM01.lib
Windows/LIBRARY_FILES/: OSTM.cpp  OSTM.h  TM.cpp  TX.cpp  TX.h
Windows/VIDEO_FILES/CLIENT_APPLICATION/: CLIENT_APPLICATION.sln
Windows/WIN_SHARED/: README.md
Windows/WIN_SHARED/APP solution/: README.md
Windows/WIN_SHARED/DLL solution/: README.md
Windows/WIN_STATIC/: README.md
(+6661 files in other folders)
