cmake_minimum_required(VERSION 3.0)

include(GenerateExportHeader)

PROJECT("O_STM")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
ADD_LIBRARY(m SHARED TM.cpp TM.h TX.cpp TX.h OSTM.cpp OSTM.h m_exports.h)
GENERATE_EXPORT_HEADER(m           
    BASE_NAME m
    EXPORT_MACRO_NAME M_EXPORTS
    EXPORT_FILE_NAME m_exports.h
    STATIC_DEFINE SHARED_EXPORTS_BUILT_AS_STATIC)

#ADD_EXECUTABLE(myexe main.c)
TARGET_LINK_LIBRARIES(myexe m)